# airflow-k8s-poc

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md
apps/k8s_kpo_poc/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/k8s_kpo_poc/src/k8s_kpo_poc/: __init__.py  __main__.py  cli.py  product.py
apps/k8s_kpo_poc/tests/: test_cli.py
dags/: k8s_kpo_poc.py
docs/research/: 01-airflow-core-concepts.md  02-executor-vs-operator.md  03-kubernetes-executor-meets-kpo.md  04-executor-strategy.md  README.md
infra/: README.md
infra/helm/: airflow-dags-pv.yaml  airflow-dags-pvc.yaml  airflow-pod-cleaner.yaml  apps-mount-note.txt  cluster-admin.yaml
infra/kind/: cluster.yaml
infra/scripts/: airflow_ports.sh  metrics_server.sh  verify-kind-load-persistence.sh
infra/values/: airflow.yaml
