[project]
name = "k8s-kpo-poc"
version = "0.1.0"
description = "KubernetesPodOperator PoC CLI app"
requires-python = "==3.14.6"
dependencies = [
  "typer==0.27.0",
]

[project.scripts]
k8s-kpo-poc = "k8s_kpo_poc.cli:app"

[dependency-groups]
dev = [
  "pytest==9.1.1",
  "ruff==0.15.22",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["hatchling>=1.31.0"]
build-backend = "hatchling.build"
